uncommented testdeadlock code, fixed small error